src/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Open+Sauce+One:wght@400;700;800&display=swap');

$primary-color: #72035d;
$secondary-color: #ccc;
$primary-background: #ffffff;
$success-color: #90ee90;
$warning-color: #f08080;
$font-family: 'Open Sauce One', sans-serif;
$border-radius: 4px;
$font-size-base: 16px;

* {
  margin: 0;
  padding: 0;
  font-size: 10px;
  box-sizing: border-box;
}

body {
  font-family: $font-family;
  font-weight: 400;
  margin-inline: auto;
}

.container {
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
  align-items: center;
  justify-content: center;
  height: 100vh;
  max-width: 100%;
}

.common-text-style {
  text-align: center;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}

.event-name {
  color: $primary-color;
  font-weight: 800;

  @media (max-width: 599px) {
    font-size: 5rem;
  }

  @media (min-width: 600px) and (max-width: 899px) {
    font-size: 10rem;
  }

  @media (min-width: 900px) and (max-width: 1199px) {
    font-size: 11rem;
  }

  @media (min-width: 1200px) {
    font-size: 12rem;
  }
}

.countdown-wrapper {
  width: 100%;
  margin: 10px auto 0 auto;

  @media (max-width: 599px) {
    font-size: clamp(1rem, 3rem, 5rem);
  }

  @media (min-width: 600px) and (max-width: 899px) {
    font-size: clamp(5rem, 5.5rem, 8rem);
  }

  @media (min-width: 900px) and (max-width: 1199px) {
    font-size: clamp(6rem, 8rem, 10rem);
  }

  @media (min-width: 1200px) {
    font-size: clamp(9rem, 9rem, 11rem);
  }
}

form {
  display: flex;
  width: 80%;
  max-width: 500px;
  flex-direction: column;
  margin-inline: auto;
  gap: 1rem;
  margin-top: 50px;

  @media (min-width: 600px) {
    width: 100%;
    flex-direction: row;
    margin-inline: auto;
    margin-top: 30px;
  }
}

label {
  margin-bottom: 5px;
  font-weight: bold;
}

.input-wrapper {
  position: relative;
  width: 100%;
  max-width: 500px;
  margin-right: 10px;

  input {
    width: 100%;
    min-width: 200px;
    padding: 12px;
    padding-top: 15px;
    box-sizing: border-box;
    border: 1px solid $secondary-color;
    border-radius: 4px;
    font-size: $font-size-base;
  }

  input:user-valid {
    border: 1px solid $success-color;
  }

  input:user-invalid {
    border: 1px solid $warning-color;
  }

  .floating-label {
    position: absolute;
    top: -5px;
    left: 10px;
    font-size: 12px;
    background-color: $primary-background;
    padding: 0 2px;
    pointer-events: none;
    font-weight: 400;
  }
}

